# codegen

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
src/: const.rs  docs.rs  fields.rs  formatter.rs  function.rs  impl.rs  import.rs  item.rs  lib.rs  module.rs  scope.rs  struct.rs  trait.rs  type_alias.rs  type_def.rs  variant.rs
tests/: codegen.rs
