[package]
name = "codegen"
# When releasing to crates.io:
# - Update CHANGELOG.md.
# - Update doc URL.
# - Create "v0.x.x" git tag.
version = "0.2.0"
license = "MIT"
authors = ["Carl Lerche <me@carllerche.com>", "Carter Schultz <carterjschultz@gmail.com>", "Iovoslav Iovchev"]
description = "Library for generating Rust code"
documentation = "https://docs.rs/codegen/0.2.0/codegen"
homepage = "https://github.com/AnAverageGitUser/codegen"
repository = "https://github.com/AnAverageGitUser/codegen"
readme = "README.md"
edition = "2021"

[dependencies]
indexmap = "2.6.0"
